Fixed a display bug of the project image on mobile devices.

--- a/src/styles/ProjectList.module.css
+++ b/src/styles/ProjectList.module.css
@@ -9,9 +9,9 @@
 }
 
 .project_item {
-  max-width: 275px;
-  min-width: 250px;
-  min-height: 250px;
+  width: 275px;
+  height: 275px;
+  max-width: 100%;
   border-radius: 50%;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -21,6 +21,7 @@
   display: block;
   width: 100%;
   height: 100%;
+  border-radius: 50%;
   object-fit: cover;
   transition: transform 0.4s ease-out;
 }
